--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.174.27;
+allow 1.168.173.81;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -201,6 +201,7 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 175.131.49.119;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -629,7 +630,6 @@ allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
-allow 193.222.98.97;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.212;
@@ -928,6 +928,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -946,7 +947,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1243,7 +1243,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1620,8 +1619,10 @@ allow 2a10:1fc0:10::28fc:90d4;
 allow 2a10:1fc0:10::2a17:5b54;
 allow 2a10:1fc0:10::2cf4:6ba2;
 allow 2a10:1fc0:10::2d91:1a2d;
+allow 2a10:1fc0:10::3903:457;
 allow 2a10:1fc0:10::3919:de17;
 allow 2a10:1fc0:10::3a1:5e9f;
+allow 2a10:1fc0:10::3dc5:e694;
 allow 2a10:1fc0:10::3eb3:d1d0;
 allow 2a10:1fc0:10::3ec1:2b1e;
 allow 2a10:1fc0:10::40d8:83c;
@@ -1632,14 +1633,19 @@ allow 2a10:1fc0:10::61d9:7617;
 allow 2a10:1fc0:10::61e2:c84d;
 allow 2a10:1fc0:10::627f:3c31;
 allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
 allow 2a10:1fc0:10::6c2e:469a;
 allow 2a10:1fc0:10::6d92:d6ab;
 allow 2a10:1fc0:10::6fde:4b8d;
+allow 2a10:1fc0:10::792f:38b4;
 allow 2a10:1fc0:10::895d:abf9;
 allow 2a10:1fc0:10::8a03:d023;
+allow 2a10:1fc0:10::8b78:d42e;
+allow 2a10:1fc0:10::8d4d:eca2;
 allow 2a10:1fc0:10::9a73:d4f2;
 allow 2a10:1fc0:10::9d80:c9f7;
 allow 2a10:1fc0:10::9e08:e765;
+allow 2a10:1fc0:10::a3a5:49da;
 allow 2a10:1fc0:10::a458:8b37;
 allow 2a10:1fc0:10::a63c:724c;
 allow 2a10:1fc0:10::b571:1205;
@@ -1653,6 +1659,7 @@ allow 2a10:1fc0:10::d6b7:b3e9;
 allow 2a10:1fc0:10::dbe0:6173;
 allow 2a10:1fc0:10::dbe9:7852;
 allow 2a10:1fc0:10::e4c8:9020;
+allow 2a10:1fc0:10::ea87:5496;
 allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
@@ -1871,6 +1878,7 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.249.49.183;
 allow 46.250.243.29;
 allow 46.30.188.218;
 allow 47.254.142.180;
@@ -1891,7 +1899,6 @@ allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
-allow 5.255.110.29;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
@@ -1968,6 +1975,10 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.239.55.11;
+allow 85.239.55.110;
+allow 85.239.55.112;
+allow 85.239.55.114;
 allow 85.239.55.123;
 allow 85.239.55.132;
 allow 85.239.55.168;
@@ -1984,6 +1995,8 @@ allow 85.239.55.24;
 allow 85.239.55.249;
 allow 85.239.55.25;
 allow 85.239.55.250;
+allow 85.239.55.31;
+allow 85.239.55.37;
 allow 85.239.55.51;
 allow 85.239.55.80;
 allow 85.93.218.204;
@@ -1999,6 +2012,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -2042,11 +2056,13 @@ allow 91.227.77.209;
 allow 91.227.77.226;
 allow 91.227.77.229;
 allow 91.227.77.237;
+allow 91.227.77.25;
 allow 91.227.77.31;
 allow 91.227.77.36;
 allow 91.227.77.44;
 allow 91.227.77.48;
 allow 91.227.77.51;
+allow 91.227.77.54;
 allow 91.227.77.62;
 allow 91.227.77.97;
 allow 91.92.109.126;
