--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,7 +110,7 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.168.174.27;
+deny 1.168.173.81;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -201,6 +201,7 @@ deny 172.81.132.94;
 deny 173.0.3.111;
 deny 173.237.206.68;
 deny 173.255.198.243;
+deny 175.131.49.119;
 deny 176.118.193.33;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -629,7 +630,6 @@ deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
-deny 193.222.98.97;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.212;
@@ -928,6 +928,7 @@ deny 209.141.40.68;
 deny 209.141.45.141;
 deny 209.141.45.81;
 deny 209.141.46.203;
+deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.54.218;
@@ -946,7 +947,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1243,7 +1243,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1620,8 +1619,10 @@ deny 2a10:1fc0:10::28fc:90d4;
 deny 2a10:1fc0:10::2a17:5b54;
 deny 2a10:1fc0:10::2cf4:6ba2;
 deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
 deny 2a10:1fc0:10::3919:de17;
 deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
 deny 2a10:1fc0:10::3eb3:d1d0;
 deny 2a10:1fc0:10::3ec1:2b1e;
 deny 2a10:1fc0:10::40d8:83c;
@@ -1632,14 +1633,19 @@ deny 2a10:1fc0:10::61d9:7617;
 deny 2a10:1fc0:10::61e2:c84d;
 deny 2a10:1fc0:10::627f:3c31;
 deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
 deny 2a10:1fc0:10::6c2e:469a;
 deny 2a10:1fc0:10::6d92:d6ab;
 deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
 deny 2a10:1fc0:10::895d:abf9;
 deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
 deny 2a10:1fc0:10::9a73:d4f2;
 deny 2a10:1fc0:10::9d80:c9f7;
 deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
 deny 2a10:1fc0:10::a458:8b37;
 deny 2a10:1fc0:10::a63c:724c;
 deny 2a10:1fc0:10::b571:1205;
@@ -1653,6 +1659,7 @@ deny 2a10:1fc0:10::d6b7:b3e9;
 deny 2a10:1fc0:10::dbe0:6173;
 deny 2a10:1fc0:10::dbe9:7852;
 deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
 deny 2a10:1fc0:10::fa6c:cac5;
 deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
@@ -1871,6 +1878,7 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 47.254.142.180;
@@ -1891,7 +1899,6 @@ deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
 deny 5.255.104.202;
-deny 5.255.110.29;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.58;
@@ -1968,6 +1975,10 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
 deny 85.239.55.123;
 deny 85.239.55.132;
 deny 85.239.55.168;
@@ -1984,6 +1995,8 @@ deny 85.239.55.24;
 deny 85.239.55.249;
 deny 85.239.55.25;
 deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
 deny 85.239.55.51;
 deny 85.239.55.80;
 deny 85.93.218.204;
@@ -1999,6 +2012,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -2042,11 +2056,13 @@ deny 91.227.77.209;
 deny 91.227.77.226;
 deny 91.227.77.229;
 deny 91.227.77.237;
+deny 91.227.77.25;
 deny 91.227.77.31;
 deny 91.227.77.36;
 deny 91.227.77.44;
 deny 91.227.77.48;
 deny 91.227.77.51;
+deny 91.227.77.54;
 deny 91.227.77.62;
 deny 91.227.77.97;
 deny 91.92.109.126;
