--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -357,7 +357,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -734,8 +733,10 @@ deny 2a10:1fc0:10::28fc:90d4;
 deny 2a10:1fc0:10::2a17:5b54;
 deny 2a10:1fc0:10::2cf4:6ba2;
 deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
 deny 2a10:1fc0:10::3919:de17;
 deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
 deny 2a10:1fc0:10::3eb3:d1d0;
 deny 2a10:1fc0:10::3ec1:2b1e;
 deny 2a10:1fc0:10::40d8:83c;
@@ -746,14 +747,19 @@ deny 2a10:1fc0:10::61d9:7617;
 deny 2a10:1fc0:10::61e2:c84d;
 deny 2a10:1fc0:10::627f:3c31;
 deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
 deny 2a10:1fc0:10::6c2e:469a;
 deny 2a10:1fc0:10::6d92:d6ab;
 deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
 deny 2a10:1fc0:10::895d:abf9;
 deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
 deny 2a10:1fc0:10::9a73:d4f2;
 deny 2a10:1fc0:10::9d80:c9f7;
 deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
 deny 2a10:1fc0:10::a458:8b37;
 deny 2a10:1fc0:10::a63c:724c;
 deny 2a10:1fc0:10::b571:1205;
@@ -767,6 +773,7 @@ deny 2a10:1fc0:10::d6b7:b3e9;
 deny 2a10:1fc0:10::dbe0:6173;
 deny 2a10:1fc0:10::dbe9:7852;
 deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
 deny 2a10:1fc0:10::fa6c:cac5;
 deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
