--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.174.27;
+set_real_ip_from 1.168.173.81;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -201,6 +201,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 175.131.49.119;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -629,7 +630,6 @@ set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
-set_real_ip_from 193.222.98.97;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.212;
@@ -928,6 +928,7 @@ set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
@@ -946,7 +947,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1243,7 +1243,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1620,8 +1619,10 @@ set_real_ip_from 2a10:1fc0:10::28fc:90d4;
 set_real_ip_from 2a10:1fc0:10::2a17:5b54;
 set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
 set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3903:457;
 set_real_ip_from 2a10:1fc0:10::3919:de17;
 set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
+set_real_ip_from 2a10:1fc0:10::3dc5:e694;
 set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
 set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
 set_real_ip_from 2a10:1fc0:10::40d8:83c;
@@ -1632,14 +1633,19 @@ set_real_ip_from 2a10:1fc0:10::61d9:7617;
 set_real_ip_from 2a10:1fc0:10::61e2:c84d;
 set_real_ip_from 2a10:1fc0:10::627f:3c31;
 set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
 set_real_ip_from 2a10:1fc0:10::6c2e:469a;
 set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
 set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::792f:38b4;
 set_real_ip_from 2a10:1fc0:10::895d:abf9;
 set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8b78:d42e;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
 set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
 set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
 set_real_ip_from 2a10:1fc0:10::9e08:e765;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
 set_real_ip_from 2a10:1fc0:10::a458:8b37;
 set_real_ip_from 2a10:1fc0:10::a63c:724c;
 set_real_ip_from 2a10:1fc0:10::b571:1205;
@@ -1653,6 +1659,7 @@ set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
 set_real_ip_from 2a10:1fc0:10::dbe0:6173;
 set_real_ip_from 2a10:1fc0:10::dbe9:7852;
 set_real_ip_from 2a10:1fc0:10::e4c8:9020;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
 set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
 set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
@@ -1871,6 +1878,7 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 47.254.142.180;
@@ -1891,7 +1899,6 @@ set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
-set_real_ip_from 5.255.110.29;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
@@ -1968,6 +1975,10 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.110;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.114;
 set_real_ip_from 85.239.55.123;
 set_real_ip_from 85.239.55.132;
 set_real_ip_from 85.239.55.168;
@@ -1984,6 +1995,8 @@ set_real_ip_from 85.239.55.24;
 set_real_ip_from 85.239.55.249;
 set_real_ip_from 85.239.55.25;
 set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.37;
 set_real_ip_from 85.239.55.51;
 set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.93.218.204;
@@ -1999,6 +2012,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -2042,11 +2056,13 @@ set_real_ip_from 91.227.77.209;
 set_real_ip_from 91.227.77.226;
 set_real_ip_from 91.227.77.229;
 set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.25;
 set_real_ip_from 91.227.77.31;
 set_real_ip_from 91.227.77.36;
 set_real_ip_from 91.227.77.44;
 set_real_ip_from 91.227.77.48;
 set_real_ip_from 91.227.77.51;
+set_real_ip_from 91.227.77.54;
 set_real_ip_from 91.227.77.62;
 set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
