--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -73,6 +73,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -110,7 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.173.81;
+allow 1.170.248.211;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -279,7 +280,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -681,6 +681,7 @@ allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
+allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.189.27.123;
 allow 199.195.248.168;
@@ -1061,6 +1062,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1296,7 +1298,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1614,54 +1615,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
 allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1803,6 +1757,7 @@ allow 45.192.243.213;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
+allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1878,7 +1833,6 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.249.49.183;
 allow 46.250.243.29;
 allow 46.30.188.218;
 allow 47.254.142.180;
@@ -1894,7 +1848,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1975,30 +1928,6 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.239.55.11;
-allow 85.239.55.110;
-allow 85.239.55.112;
-allow 85.239.55.114;
-allow 85.239.55.123;
-allow 85.239.55.132;
-allow 85.239.55.168;
-allow 85.239.55.173;
-allow 85.239.55.174;
-allow 85.239.55.184;
-allow 85.239.55.189;
-allow 85.239.55.192;
-allow 85.239.55.201;
-allow 85.239.55.228;
-allow 85.239.55.230;
-allow 85.239.55.239;
-allow 85.239.55.24;
-allow 85.239.55.249;
-allow 85.239.55.25;
-allow 85.239.55.250;
-allow 85.239.55.31;
-allow 85.239.55.37;
-allow 85.239.55.51;
-allow 85.239.55.80;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -2041,30 +1970,7 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.227.114.153;
-allow 91.227.77.107;
-allow 91.227.77.108;
-allow 91.227.77.119;
-allow 91.227.77.125;
-allow 91.227.77.139;
-allow 91.227.77.158;
-allow 91.227.77.160;
-allow 91.227.77.181;
-allow 91.227.77.193;
-allow 91.227.77.200;
-allow 91.227.77.208;
-allow 91.227.77.209;
-allow 91.227.77.226;
-allow 91.227.77.229;
-allow 91.227.77.237;
-allow 91.227.77.25;
-allow 91.227.77.31;
 allow 91.227.77.36;
-allow 91.227.77.44;
-allow 91.227.77.48;
-allow 91.227.77.51;
-allow 91.227.77.54;
-allow 91.227.77.62;
-allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
