--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 114.41.27.15;
+set_real_ip_from 1.170.206.200;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -181,6 +181,7 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 167.99.88.172;
 set_real_ip_from 171.25.193.131;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -206,6 +207,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 175.131.49.119;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -949,7 +951,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1249,7 +1250,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1301,7 +1301,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1669,6 +1668,8 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
+set_real_ip_from 2a12:a800:2:1:45:141:215:88;
+set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
 set_real_ip_from 2a12:a800:2:1:45:141:215:97;
 set_real_ip_from 2a12:a800:2:1:45:80:158:167;
@@ -1722,6 +1723,7 @@ set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
@@ -1750,6 +1752,8 @@ set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
+set_real_ip_from 45.141.215.88;
+set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
@@ -1847,7 +1851,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.230.119.146;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1958,6 +1961,7 @@ set_real_ip_from 91.202.5.155;
 set_real_ip_from 91.202.5.72;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
+set_real_ip_from 91.206.169.23;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
@@ -1976,7 +1980,6 @@ set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
